# neuralnet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: sampling.arff  sampling.txt
include/: ann.hpp  dataio.hpp
libs/googletest/: CMakeLists.txt
libs/src/: main.cpp
libs/src/lib/: ann.cpp  dataio.cpp
tests/: ForwardTest.cpp
